<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/Header"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/bilSatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Label_Bil_Pertama"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="number"/>
    <EditText
        android:id="@+id/bilDua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bilSatu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Label_Bil_Kedua"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="number"/>
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilDua"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="20dp"
        android:text="@string/Label_Plus"/>
    <Button
        android:id="@+id/btnMinus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilDua"
        android:layout_marginVertical="20dp"
        android:layout_toEndOf="@+id/btnPlus"
        android:text="@string/Label_Minus"/>
    <Button
        android:id="@+id/btnKali"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilDua"
        android:layout_toEndOf="@+id/btnMinus"
        android:layout_marginVertical="20dp"
        android:text="@string/Label_Kali"/>
    <Button
        android:id="@+id/btnBagi"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilDua"
        android:layout_toEndOf="@+id/btnKali"
        android:layout_marginVertical="20dp"
        android:text="@string/Label_Bagi"/>
    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilDua"
        android:layout_toEndOf="@+id/btnBagi"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="20dp"
        android:text="@string/Label_Clear"/>
    <TextView
        android:id="@+id/headHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPlus"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Labeh_Header_Hasil"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headHasil"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center|top"
        android:text="@string/Label_Hasil"
        android:textStyle="bold"
        android:textSize="50sp"/>
</RelativeLayout>